@@ -1,0 +1,4 @@
+SUBDIRS = libs
+
+# Extra clean files so that maintainer-clean removes *everything*
+MAINTAINERCLEANFILES = Makefile.in
