@@ -1,0 +1,28 @@
+<?xml version="1.0"?>
+<!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+               "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
+<book id="index" xmlns:xi="http://www.w3.org/2003/XInclude">
+  <bookinfo>
+    <title>GStreamer VA-API Plugins @GST_MAJORMINOR@ Library Reference Manual</title>
+    <releaseinfo>
+      for GStreamer VA-API Library @GST_MAJORMINOR@ (@PACKAGE_VERSION@)
+    </releaseinfo>
+  </bookinfo>
+
+  <chapter>
+    <title>GStreamer VA-API Plugins Library</title>
+    <xi:include href="xml/gstvaapidisplay.xml"/>
+    <xi:include href="xml/gstvaapidisplay_x11.xml"/>
+    <xi:include href="xml/gstvaapiwindow.xml"/>
+    <xi:include href="xml/gstvaapiwindow_x11.xml"/>
+    <xi:include href="xml/gstvaapisurface.xml"/>
+    <xi:include href="xml/gstvaapiimage.xml"/>
+    <xi:include href="xml/gstvaapiimageformat.xml"/>
+    <xi:include href="xml/gstvaapisubpicture.xml"/>
+    <xi:include href="xml/gstvaapivideopool.xml"/>
+    <xi:include href="xml/gstvaapisurfacepool.xml"/>
+    <xi:include href="xml/gstvaapiimagepool.xml"/>
+    <xi:include href="xml/gstvaapivideobuffer.xml"/>
+    <xi:include href="xml/gstvaapivideosink.xml"/>
+  </chapter>
+</book>
