@@ -1,0 +1,272 @@
+<SECTION>
+<FILE>gstvaapisurfacepool</FILE>
+<TITLE>GstVaapiSurfacePool</TITLE>
+GstVaapiSurfacePool
+GstVaapiSurfacePoolClass
+gst_vaapi_surface_pool_new
+<SUBSECTION Standard>
+GST_VAAPI_SURFACE_POOL
+GST_VAAPI_IS_SURFACE_POOL
+GST_VAAPI_TYPE_SURFACE_POOL
+gst_vaapi_surface_pool_get_type
+GST_VAAPI_SURFACE_POOL_CLASS
+GST_VAAPI_IS_SURFACE_POOL_CLASS
+GST_VAAPI_SURFACE_POOL_GET_CLASS
+</SECTION>
+
+<SECTION>
+<FILE>gstvaapivideopool</FILE>
+<TITLE>GstVaapiVideoPool</TITLE>
+GstVaapiVideoPool
+GstVaapiVideoPoolClass
+gst_vaapi_video_pool_get_caps
+gst_vaapi_video_pool_get_object
+gst_vaapi_video_pool_put_object
+<SUBSECTION Standard>
+GST_VAAPI_VIDEO_POOL
+GST_VAAPI_IS_VIDEO_POOL
+GST_VAAPI_TYPE_VIDEO_POOL
+gst_vaapi_video_pool_get_type
+GST_VAAPI_VIDEO_POOL_CLASS
+GST_VAAPI_IS_VIDEO_POOL_CLASS
+GST_VAAPI_VIDEO_POOL_GET_CLASS
+</SECTION>
+
+<SECTION>
+<FILE>gstvaapivideosink</FILE>
+<TITLE>GstVaapiVideoSink</TITLE>
+GST_VAAPI_VIDEO_SINK_GET_INTERFACE
+GstVaapiVideoSinkInterface
+gst_vaapi_video_sink_get_display
+gst_vaapi_video_sink_lookup
+<SUBSECTION Standard>
+GST_VAAPI_VIDEO_SINK
+GST_VAAPI_IS_VIDEO_SINK
+GST_VAAPI_TYPE_VIDEO_SINK
+gst_vaapi_video_sink_get_type
+</SECTION>
+
+<SECTION>
+<FILE>gstvaapidisplay_x11</FILE>
+GST_VAAPI_DISPLAY_XDISPLAY
+<TITLE>GstVaapiDisplayX11</TITLE>
+GstVaapiDisplayX11
+GstVaapiDisplayX11Class
+gst_vaapi_display_x11_new
+gst_vaapi_display_x11_new_with_display
+gst_vaapi_display_x11_get_display
+<SUBSECTION Standard>
+GST_VAAPI_DISPLAY_X11
+GST_VAAPI_IS_DISPLAY_X11
+GST_VAAPI_TYPE_DISPLAY_X11
+gst_vaapi_display_x11_get_type
+GST_VAAPI_DISPLAY_X11_CLASS
+GST_VAAPI_IS_DISPLAY_X11_CLASS
+GST_VAAPI_DISPLAY_X11_GET_CLASS
+</SECTION>
+
+<SECTION>
+<FILE>gstvaapiwindow_x11</FILE>
+<TITLE>GstVaapiWindowX11</TITLE>
+GstVaapiWindowX11
+GstVaapiWindowX11Class
+gst_vaapi_window_x11_new
+gst_vaapi_window_x11_new_with_xid
+gst_vaapi_window_x11_get_xid
+<SUBSECTION Standard>
+GST_VAAPI_WINDOW_X11
+GST_VAAPI_IS_WINDOW_X11
+GST_VAAPI_TYPE_WINDOW_X11
+gst_vaapi_window_x11_get_type
+GST_VAAPI_WINDOW_X11_CLASS
+GST_VAAPI_IS_WINDOW_X11_CLASS
+GST_VAAPI_WINDOW_X11_GET_CLASS
+</SECTION>
+
+<SECTION>
+<FILE>gstvaapidisplay</FILE>
+GST_VAAPI_DISPLAY_VADISPLAY
+GST_VAAPI_DISPLAY_LOCK
+GST_VAAPI_DISPLAY_UNLOCK
+<TITLE>GstVaapiDisplay</TITLE>
+GstVaapiDisplay
+GstVaapiDisplayClass
+gst_vaapi_display_new_with_display
+gst_vaapi_display_lock
+gst_vaapi_display_unlock
+gst_vaapi_display_get_display
+gst_vaapi_display_has_profile
+gst_vaapi_display_get_image_caps
+gst_vaapi_display_has_image_format
+gst_vaapi_display_get_subpicture_caps
+gst_vaapi_display_has_subpicture_format
+<SUBSECTION Standard>
+GST_VAAPI_DISPLAY
+GST_VAAPI_IS_DISPLAY
+GST_VAAPI_TYPE_DISPLAY
+gst_vaapi_display_get_type
+GST_VAAPI_DISPLAY_CLASS
+GST_VAAPI_IS_DISPLAY_CLASS
+GST_VAAPI_DISPLAY_GET_CLASS
+</SECTION>
+
+<SECTION>
+<FILE>gstvaapiimagepool</FILE>
+<TITLE>GstVaapiImagePool</TITLE>
+GstVaapiImagePool
+GstVaapiImagePoolClass
+gst_vaapi_image_pool_new
+<SUBSECTION Standard>
+GST_VAAPI_IMAGE_POOL
+GST_VAAPI_IS_IMAGE_POOL
+GST_VAAPI_TYPE_IMAGE_POOL
+gst_vaapi_image_pool_get_type
+GST_VAAPI_IMAGE_POOL_CLASS
+GST_VAAPI_IS_IMAGE_POOL_CLASS
+GST_VAAPI_IMAGE_POOL_GET_CLASS
+</SECTION>
+
+<SECTION>
+<FILE>gstvaapivideobuffer</FILE>
+<TITLE>GstVaapiVideoBuffer</TITLE>
+GstVaapiVideoBuffer
+GstVaapiVideoBufferClass
+gst_vaapi_video_buffer_new_from_pool
+gst_vaapi_video_buffer_new_with_image
+gst_vaapi_video_buffer_new_with_surface
+gst_vaapi_video_buffer_get_image
+gst_vaapi_video_buffer_set_image
+gst_vaapi_video_buffer_set_image_from_pool
+gst_vaapi_video_buffer_get_surface
+gst_vaapi_video_buffer_set_surface
+gst_vaapi_video_buffer_set_surface_from_pool
+<SUBSECTION Standard>
+GST_VAAPI_VIDEO_BUFFER
+GST_VAAPI_IS_VIDEO_BUFFER
+GST_VAAPI_TYPE_VIDEO_BUFFER
+gst_vaapi_video_buffer_get_type
+GST_VAAPI_VIDEO_BUFFER_CLASS
+GST_VAAPI_IS_VIDEO_BUFFER_CLASS
+GST_VAAPI_VIDEO_BUFFER_GET_CLASS
+</SECTION>
+
+<SECTION>
+<FILE>gstvaapiwindow</FILE>
+<TITLE>GstVaapiWindow</TITLE>
+GstVaapiWindow
+GstVaapiWindowClass
+gst_vaapi_window_show
+gst_vaapi_window_hide
+gst_vaapi_window_get_width
+gst_vaapi_window_get_height
+gst_vaapi_window_get_size
+gst_vaapi_window_set_width
+gst_vaapi_window_set_height
+gst_vaapi_window_set_size
+gst_vaapi_window_put_surface
+gst_vaapi_window_put_surface_full
+<SUBSECTION Standard>
+GST_VAAPI_WINDOW
+GST_VAAPI_IS_WINDOW
+GST_VAAPI_TYPE_WINDOW
+gst_vaapi_window_get_type
+GST_VAAPI_WINDOW_CLASS
+GST_VAAPI_IS_WINDOW_CLASS
+GST_VAAPI_WINDOW_GET_CLASS
+</SECTION>
+
+<SECTION>
+<FILE>gstvaapiimage</FILE>
+GST_VAAPI_IMAGE_FORMAT
+GST_VAAPI_IMAGE_WIDTH
+GST_VAAPI_IMAGE_HEIGHT
+<TITLE>GstVaapiImage</TITLE>
+GstVaapiImage
+GstVaapiImageClass
+gst_vaapi_image_new
+gst_vaapi_image_new_with_image
+gst_vaapi_image_get_id
+gst_vaapi_image_get_image
+gst_vaapi_image_get_display
+gst_vaapi_image_get_format
+gst_vaapi_image_get_width
+gst_vaapi_image_get_height
+gst_vaapi_image_get_size
+gst_vaapi_image_is_linear
+gst_vaapi_image_is_mapped
+gst_vaapi_image_map
+gst_vaapi_image_unmap
+gst_vaapi_image_get_plane_count
+gst_vaapi_image_get_plane
+gst_vaapi_image_get_pitch
+gst_vaapi_image_get_data_size
+gst_vaapi_image_update_from_buffer
+<SUBSECTION Standard>
+GST_VAAPI_IMAGE
+GST_VAAPI_IS_IMAGE
+GST_VAAPI_TYPE_IMAGE
+gst_vaapi_image_get_type
+GST_VAAPI_IMAGE_CLASS
+GST_VAAPI_IS_IMAGE_CLASS
+GST_VAAPI_IMAGE_GET_CLASS
+</SECTION>
+
+<SECTION>
+<FILE>gstvaapisurface</FILE>
+GstVaapiChromaType
+<TITLE>GstVaapiSurface</TITLE>
+GstVaapiSurface
+GstVaapiSurfaceClass
+gst_vaapi_surface_new
+gst_vaapi_surface_get_id
+gst_vaapi_surface_get_display
+gst_vaapi_surface_get_chroma_type
+gst_vaapi_surface_get_width
+gst_vaapi_surface_get_height
+gst_vaapi_surface_get_size
+gst_vaapi_surface_derive_image
+gst_vaapi_surface_get_image
+gst_vaapi_surface_put_image
+gst_vaapi_surface_sync
+<SUBSECTION Standard>
+GST_VAAPI_SURFACE
+GST_VAAPI_IS_SURFACE
+GST_VAAPI_TYPE_SURFACE
+gst_vaapi_surface_get_type
+GST_VAAPI_SURFACE_CLASS
+GST_VAAPI_IS_SURFACE_CLASS
+GST_VAAPI_SURFACE_GET_CLASS
+</SECTION>
+
+<SECTION>
+<FILE>gstvaapisubpicture</FILE>
+<TITLE>GstVaapiSubpicture</TITLE>
+GstVaapiSubpicture
+GstVaapiSubpictureClass
+gst_vaapi_subpicture_new
+gst_vaapi_subpicture_get_id
+gst_vaapi_subpicture_get_image
+gst_vaapi_subpicture_set_image
+<SUBSECTION Standard>
+GST_VAAPI_SUBPICTURE
+GST_VAAPI_IS_SUBPICTURE
+GST_VAAPI_TYPE_SUBPICTURE
+gst_vaapi_subpicture_get_type
+GST_VAAPI_SUBPICTURE_CLASS
+GST_VAAPI_IS_SUBPICTURE_CLASS
+GST_VAAPI_SUBPICTURE_GET_CLASS
+</SECTION>
+
+<SECTION>
+<FILE>gstvaapiimageformat</FILE>
+<TITLE>GstVaapiImageFormat</TITLE>
+GstVaapiImageFormat
+gst_vaapi_image_format_is_rgb
+gst_vaapi_image_format_is_yuv
+gst_vaapi_image_format
+gst_vaapi_image_format_from_caps
+gst_vaapi_image_format_from_fourcc
+gst_vaapi_image_format_get_va_format
+gst_vaapi_image_format_get_caps
+gst_vaapi_image_format_get_score
+</SECTION>
