@@ -1,0 +1,12 @@
+gst_vaapi_surface_pool_get_type
+gst_vaapi_video_pool_get_type
+gst_vaapi_video_sink_get_type
+gst_vaapi_display_x11_get_type
+gst_vaapi_window_x11_get_type
+gst_vaapi_display_get_type
+gst_vaapi_image_pool_get_type
+gst_vaapi_video_buffer_get_type
+gst_vaapi_window_get_type
+gst_vaapi_image_get_type
+gst_vaapi_surface_get_type
+gst_vaapi_subpicture_get_type
