@@ -2,6 +2,7 @@ gst-vaapi NEWS -- summary of changes.  2010-03-DD
 Copyright (C) 2010 Splitted-Desktop Systems
 
 Version 0.1.1 - DD.Mar.2010
+* Document public API for libgstvaapi-*.so.*
 * Optimize `vaapiconvert' pipeline (direct-rendering)
 
 Version 0.1.0 - 16.Mar.2010
